--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,273 @@
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="quienessomos" id="quienessomos">            
+    <div class="container">
+        <div class="row">
+            <div class="col-6 text-justify">
+                <h3 class="my-5">QUIENES SOMOS</h3>
+                <p><b>Presidente:</b> Sra. María Lina Valdez de Molina</p>
+                <p><b>Vicepresidente:</b> Sra. Norma E. Casas Gamboni</p>
+                <p><b>Vicepresidente 2da:</b> Sra. Ester Delgado</p>                           
+                <p><b>Secretaria:</b> Sra. Juliana Falcon</p>   
+                <p><b>Tesorera:</b> Sra. Norma Segobia</p>   
+                <p><b>Protesorera:</b> Sra. María Mercedes Ricardes</p>
+                <p><b>Vocales:</b></p>
+                <p>Sra. Mercedes Ponte, Sra. María Elena Martinez</p>
+                <p>Sra. Lorena Di Rollo, Sra. Stella Vilca</p>
+                <p>Sra. María Alejandra Álvarez, Sra. Aída Brandan de Sánchez Varela</p>                
+                <p>Sra. Alcira Velazquez, Sra. Patricia Álvarez</p>
+                <p>Sra. Ayelén Carina Calisaya</p>
+                <p><b> Delegada ante el Consejo Superior:</b> Sra. Nelda Wayar de Muga</p>      
+                <p><b>Delegados en la Provincia de Jujuy:</b></p>
+                <p> Sra. Andrea Molina Valdez</p>
+                <p> Sra. Antonia Mamaní</p>
+                <p> Dr. Carlos Quinteros</p>
+                <p>Dr. Marcelo Villa</p>                        
+            </div>
+            <div class="col-6 text-justify">
+              <h3 class="my-5" id="anaglyph-text">Nuestros objetivos</h3>
+              <p><em>Contribuir con elementos materiales para cubrir necesidades asistenciales, sociales y educacionales de personas carentes de recursos económicos.
+                     Colaborar con Hospitales, Hogares de ancianos, Cooperadoras escolares, Comedores infantiles, Salas de primeros auxilios y otros.                            
+                     Gestionar en ésta ciudad internaciones, tratamientos, curaciones, etc. a jujeños que llegan a Buenos Aires.                            
+                     Proveer el desarrollo comunitario tendiente a ayudar a aquellos que lo necesitan.                            
+                     Promover una mejor calidad de vida.</em></p>
+                     <br>
+                     <br>
+                   <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/1-IMG-20180416-WA0004.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                    
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/48649354-fcbb-4296-b8c9-e14d29011b04.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                   
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/ad2fee44-d824-4d80-8790-b4b2311fb68d.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                    
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/79f355e5-8cf3-4613-8d11-5b67446e37b1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                    
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/d0a529e5-a6b9-40a0-801b-d426b0ff2f74.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                    
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/15339ab3-6e64-4d99-9222-796af0c6c229.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">                                                                    
+                        </div>
+                      </div>                              
+                    </div>                            
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>                                                                                                
+            </div>                                        
+        </div>
+    </div>
+</section>
+<!--NUESTROS LOGROS-->
+<section class="nuestroslogros" id="nuestroslogros">           
+    <div class="container">
+      <div class="row">
+        <h3 class="my-5">NUESTROS LOGROS</h3>
+        <div class="col-3">                    
+          <div class="card text-center">                      
+            <img src="images/Hogares.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Hogares de ancianos</h5>
+              <p class="card-text">Hogar de Ancianos “Del Rosario” –Dpto. Tilcara
+                Hogar de Ancianos “Nuestra Señora de La Merced”- La Quiaca</p>
+              <a href="http://www.circulodejujuy.com.ar/" target="_blank" class="btn btn-primary">Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card text-center">
+            <img src="images/ago2021_13_web.jpg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Guarderias</h5>
+              <p class="card-text">Centro Municipal de Cuidados Infantiles Abra Pampa Dpto. Cochinoca</p>
+              <a href="http://www.circulodejujuy.com.ar/" target="_blank" class="btn btn-primary">Ver más</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+            <div class="card text-center">
+              <img src="Images/esc_245_web_p.jpg" class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-title">Merenderos</h5>
+                <p class="card-text">Un grupo de madres crearon el 'Merendero a todo pulmón'</p>
+                <a href="http://www.circulodejujuy.com.ar/" target="_blank" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div> 
+        <div class="col-3">
+          <div class="card text-center">
+            <img src="Images/Artekis-01-1536x712.jpeg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Formando Lectores</h5>
+              <p class="card-text">El Círculo de Damas de la Provincia de Jujuy continúa acompañando a instituciones como la Biblioteca Artekis</p>
+              <a href="https://beneficencia.org.ar/circulo-de-jujuy/?query-1-page=2" target="_blank" class="btn btn-primary">Ver más</a>
+            </div>
+          </div>
+        </div>              
+      </div>
+    </div>
+</section>
+<!--COMO AYUDAR-->
+<section class="comoayudar" id="comoayudar">            
+  <div class="container">            
+      <div class="row">
+          <div class="col-6 text-justify">
+              <h3 class="my-5">DONACIONES</h3>
+              <img src="images/set-colored-cartoon-characters-young-260nw-2291869903.jpg" class="d-block w-100" alt="...">   
+              <p id="product-description" class="align-top"><b>Te invitamos a formar parte de nuestro Círculo. Podés ayudarnos de las siguientes maneras:</b></p>                      
+              <ul>
+                <li class="lista1">Donar ropa, calzado, útiles, juguetes, pañales, golosinas, medicamentos.</li><br>
+                <li class="lista2">Asistir a eventos especiales organizados por la institución para recaudar fondos.</li><br>
+                <li class="lista3">Difundir nuestra tarea.</li><br>
+                <li class="lista4">Sumarse a nuestro trabajo para clasificar y embalar donaciones.</li>
+              </ul>                                                             
+          </div>
+          <div class="col-6">                    
+            <h3 class="my-5" id="text">Donaciones con Mercado Pago</h3>                    
+            <p style="margin-bottom: 50px">Elegí el monto que prefieras donar:</p>       
+            <div class="buttons-container" >                      
+              <button type="button" id="donate-5" class="btn btn-outline-danger">5 ♥️</button>
+              <button type="button" id="donate-10" class="btn btn-outline-danger">10 ♥️</button>
+              <button type="button" id="donate-20" class="btn btn-outline-danger">20 ♥️</button>                      
+            </div>
+            <br>
+            <p class="align-self-start">O ingresá la cantidad que deseas donar:</p>
+            <input type="number" id="amount-input" min="0" />
+            <p>Total a abonar: $<span id="total-amount">0</span></p>                   
+            <button type="button" id="checkout-btn" class="btn btn-outline-secondary">Checkout</button>                   
+            <div id="button-checkout"></div>                                                                         
+          </div>                
+      </div>
+  </div>
+</section>
+<!--FOOTER-->        
+    <div class="container-testimonials">
+        <div class="box__testimonials"></div>
+        <div class="box__testimonials"></div>
+        <div class="box__testimonials"></div>
+    </div>        
+<Footer>
+    <div class="container__footer">
+        <div class="box__footer">
+            <div class="logo">
+                <img src="Images/headerimg.jpg" alt="">
+            </div>
+            <div class="terms">
+                <p>Confederación Nacional de Beneficencia - CIRCULO DE JUJUY.<br>
+                   Paseo Colón 413 Piso 1 CABA Argentina.<br>
+                   T.E.: 4773.6823 / Cel. 154405.9456 / WhatsApp: 114405.9456
+                   circulodedamasdejujuy@hotmail.com
+            </div>
+        </div>
+        <div class="box__footer">
+            <h2>Otros círculos</h2>
+            <a href="https://beneficencia.org.ar/circulo-de-buenos-aires/" target="_blank">Círculo de Buenos Aires</a>
+            <a href="https://beneficencia.org.ar/circulo-de-neuquen/" target="_blank">Círculo de Neuquén</a>
+            <a href="https://beneficencia.org.ar/circulo-de-jujuy/" target="_blank">Círculo de Jujuy</a>                    
+        </div>
+        <div class="box__footer">
+            <h2>Redes Sociales</h2>
+            <a href="https://www.facebook.com/circulodejujuy" target="_blank"><i class="fab fa-facebook-square"></i></a>                    
+            <a href="https://www.instagram.com/cbeneficencia/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+        </div>
+    </div>
+    <div class="box__copyright">
+        <hr>
+        <p>Todos los derechos reservados © 2023 <b>CodeBaires</b></p>
+    </div>
+</Footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="index.js"></script>
+<script src="index2.js"></script>
+</body>
+</html>
