Subo actualizaciones al Proyecto Final

--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,10 @@
     <title>Círculo de Jujuy</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="scrollreveal.js"></script>
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body>
   <!-- Inicio del menu -->
@@ -199,37 +200,71 @@
 </section>
 <!--COMO AYUDAR-->
 <section class="comoayudar" id="comoayudar">            
-  <div class="container">            
-      <div class="row">
-          <div class="col-6 text-justify">
-              <h3 class="my-5">DONACIONES</h3>
-              <img src="images/set-colored-cartoon-characters-young-260nw-2291869903.jpg" class="d-block w-100" alt="...">   
-              <p id="product-description" class="align-top"><b>Te invitamos a formar parte de nuestro Círculo. Podés ayudarnos de las siguientes maneras:</b></p>                      
-              <ul>
-                <li class="lista1">Donar ropa, calzado, útiles, juguetes, pañales, golosinas, medicamentos.</li><br>
-                <li class="lista2">Asistir a eventos especiales organizados por la institución para recaudar fondos.</li><br>
-                <li class="lista3">Difundir nuestra tarea.</li><br>
-                <li class="lista4">Sumarse a nuestro trabajo para clasificar y embalar donaciones.</li>
-              </ul>                                                             
-          </div>
-          <div class="col-6">                    
-            <h3 class="my-5" id="text">Donaciones con Mercado Pago</h3>                    
-            <p style="margin-bottom: 50px">Elegí el monto que prefieras donar:</p>       
-            <div class="buttons-container" >                      
-              <button type="button" id="donate-5" class="btn btn-outline-danger">5 ♥️</button>
-              <button type="button" id="donate-10" class="btn btn-outline-danger">10 ♥️</button>
-              <button type="button" id="donate-20" class="btn btn-outline-danger">20 ♥️</button>                      
+    <div class="container">            
+        <div class="row">
+            <div class="col-6 text-justify">
+                <h3 class="my-5">DONACIONES</h3>
+                <img src="images/set-colored-cartoon-characters-young-260nw-2291869903.jpg" class="d-block w-100" alt="...">   
+                <p id="product-description" class="align-top"><b>Te invitamos a formar parte de nuestro Círculo. Podés ayudarnos de las siguientes maneras:</b></p>                      
+                <br>
+                <br>
+                <ul class="so">
+                  <li class="lista1">Donar ropa, calzado, útiles, juguetes, pañales, golosinas, medicamentos.</li><br>
+                  <li class="lista2">Asistir a eventos especiales organizados por la institución para recaudar fondos.</li><br>
+                  <li class="lista3">Difundir nuestra tarea.</li><br>
+                  <li class="lista4">Sumarse a nuestro trabajo para clasificar y embalar donaciones.</li>
+                </ul>                                                             
             </div>
-            <br>
-            <p class="align-self-start">O ingresá la cantidad que deseas donar:</p>
-            <input type="number" id="amount-input" min="0" />
-            <p>Total a abonar: $<span id="total-amount">0</span></p>                   
-            <button type="button" id="checkout-btn" class="btn btn-outline-secondary">Checkout</button>                   
-            <div id="button-checkout"></div>                                                                         
-          </div>                
+            <div class="col-6">                    
+              <h3 class="my-5" id="text">Donaciones con Mercado Pago</h3>                    
+              <p style="margin-bottom: 50px">Elegí el monto que prefieras donar:</p>       
+              <div class="buttons-container" >                      
+                <button type="button" id="donate-5" class="btn btn-outline-danger">5 ♥️</button>
+                <button type="button" id="donate-10" class="btn btn-outline-danger">10 ♥️</button>
+                <button type="button" id="donate-20" class="btn btn-outline-danger">20 ♥️</button>                      
+              </div>
+              <br>
+              <p class="align-self-start">O ingresá la cantidad que deseas donar:</p>
+              <input type="number" id="amount-input" min="0" />
+              <p>Total a abonar: $<span id="total-amount">0</span></p>                   
+              <button type="button" id="checkout-btn" class="btn btn-outline-secondary">Checkout</button>                   
+              <div id="button-checkout"></div>                                                                         
+            </div>                
+        </div>
+    </div>
+  </section>
+  <section class="contacto" id="contacto">
+    <div class="container">
+      <div class="row">
+        <div class="col-6" id="imgFondo">
+          <div class="col-md-6 mb-3">
+            <label for="exampleFormControlInput1" class="form-label"></label>
+            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Nombre" required>
+          </div>
+          <div class="col-md-6 mb-3">
+            <label for="exampleFormControlInput2" class="form-label"></label>
+            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="Email" required>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"></label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Tu Mensaje" rows="3"></textarea>
+          </div> 
+          <div class="col-12">
+            <input type="submit" class="btn btn-outline-secondary" id="button" value="Enviar">
+          </div>           
       </div>
-  </div>
-</section>
+      <div class="col-6" id="contact">
+        <h3 style="margin-left: 50px" class="my-5" id="side">¡SUMATE A LA COMUNIDAD!</h3>
+        <p style="margin-left: 50px"><em>AYUDANOS A CONSTRUIR EL CÍRCULO DE JUJUY.</em></p>
+        <div class="lastComent">
+          <h6>Si tenés las ganas de contribuir a causas significativas, mejorar
+              vidas y ser parte de un cambio inspirador,
+              te invitamos a formar parte de nuestro círculo de beneficencia.</h6>
+        </div>                                 
+      </div>
+      </div>         
+    </div>
+  </section>
 <!--FOOTER-->        
     <div class="container-testimonials">
         <div class="box__testimonials"></div>
@@ -267,8 +302,8 @@
     </div>
 </Footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-<script src="index.js"></script>
-<script src="index2.js"></script>
+<script src="/index.js"></script>
+<script src="/index2.js"></script>
 </body>
 </html>
 
