Subo ultimos cambios

--- a/client/index.html
+++ b/client/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="col-3">
             <div class="card text-center">
-              <img src="Images/esc_245_web_p.jpg" class="card-img-top">
+              <img src="images/esc_245_web_p.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">Merenderos</h5>
                 <p class="card-text">Un grupo de madres crearon el 'Merendero a todo pulmón'</p>
@@ -187,7 +187,7 @@
           </div> 
         <div class="col-3">
           <div class="card text-center">
-            <img src="Images/Artekis-01-1536x712.jpeg" class="card-img-top">
+            <img src="images/Artekis-01-1536x712.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Formando Lectores</h5>
               <p class="card-text">El Círculo de Damas de la Provincia de Jujuy continúa acompañando a instituciones como la Biblioteca Artekis</p>
